--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  codacy: codacy/base@5.0.4
+  codacy: codacy/base@5.2.3
 
 workflows:
   compile_test_deploy:
@@ -32,5 +32,6 @@ workflows:
           chart_name: docker-registry-cache
           charts_repo_url: "https://charts.codacy.com/external"
           push_options: --force
+          update_image_version: false
           requires:
             - tag_version_dev
